model/it-tools/production/gitops-k8s-traefik-ingress-it-tools.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: it-tools
  namespace:  default
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`tools.k8s.allanshomelab.com`)
      kind: Rule
      middlewares:
        - name: traefik-custom-headers
          namespace: default
      priority: 10
      services:
        - name: it-tools
          namespace:  it-tools
          port: 80
          scheme: http        
  tls:
    secretName: production-tls
